--- a/src/app/modify-user/modify-user.component.html
+++ b/src/app/modify-user/modify-user.component.html
@@ -87,13 +87,57 @@
         </fieldset>
 
         <div class="form-group " style="text-align: center; ">
-
-            <button class="btn btn-primary " type="button" [routerLink]="[ '/view-users']">Cancel </button>&nbsp;
-            <button class=" btn btn-primary " type="submit ">save </button>&nbsp;
-            <button class="btn btn-primary " type="button " (click)="onDelete() ">Delete </button>&nbsp;
+            <a class="btn btn-primary text-white " data-toggle="modal" type="button " data-target="#cancelModal">Cancel</a>&nbsp;
+            <a class=" btn btn-primary text-white" data-toggle="modal" data-target="#saveModal" type="button ">Save </a>&nbsp;
+            <a class="btn btn-primary text-white" data-toggle="modal" data-target="#deleteModal" type="button ">Delete </a>&nbsp;
 
             <br>
         </div>
         <br>
     </div>
+    <span class="popup">
+        <div class="modal fade" id="cancelModal" tabindex="-1" >
+        <div class="modal-dialog modal-dialog-centered modal-dialog modal-sm" >
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Discard changes?</h5>
+                </div>
+                <div class="modal-body">
+                    <button class=" btn btn-danger "  type="button" data-dismiss="modal"> Back </button>&nbsp;
+
+                    <button class=" btn btn-primary btn float-right" type="button" data-dismiss="modal" [routerLink]="[ '/view-users'] "> Confirm </button>&nbsp;
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="saveModal" tabindex="-1" >
+        <div class="modal-dialog modal-dialog-centered modal-dialog modal-sm" >
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" >Confirm Submit?</h5>
+                </div>
+                <div class="modal-body">
+                    <button class=" btn btn-danger " type="button" data-dismiss="modal"> Back </button>&nbsp;
+
+                    <button class="btn btn-primary float-right" type="submit"  >Confirm Submit </button>&nbsp;
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="deleteModal" tabindex="-1" >
+        <div class="modal-dialog modal-dialog-centered modal-dialog modal-sm" >
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" >Confirm Delete?</h5>
+                </div>
+                <div class="modal-body">
+                    <button class=" btn btn-danger " type="button" data-dismiss="modal"> Back </button>&nbsp;
+
+                    <button class="btn btn-primary float-right" type="button"  (click)="onDelete() ">Delete </button>&nbsp;
+                </div>
+            </div>
+        </div>
+    </div>
+    </span>
 </form>
